# k8s.LogJedi

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  _config.yml  index.md
.cursor/rules/: logsage.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-and-push.yml  ci.yml  golangci_lint.yaml  pages.yaml  release.yml  semantic_pr.yaml  test.yaml
charts/logjedi/: Chart.yaml  values.yaml
charts/logjedi/templates/: NOTES.txt  llm-service-secret.yaml  llm-service.yaml  operator-configmap.yaml  operator-deployment.yaml  operator-rbac.yaml
charts/logsage/: Chart.yaml  values.yaml
charts/logsage/templates/: NOTES.txt  llm-service-secret.yaml  llm-service.yaml  operator-configmap.yaml  operator-deployment.yaml  operator-rbac.yaml
docs/: api-contract.md  release.md  requirements.md  security.md
docs/adr/: 0001-operator-and-llm-service-split.md  0002-strategic-merge-patch-for-remediation.md
llm-service/: .env.example  Dockerfile  config.py  llm_client.py  main.py  models.py  pyproject.toml  requirements.txt
llm-service/deploy/: README.md  deployment.yaml
llm-service/routers/: analyze.py  health.py
llm-service/services/: analyzer.py
llm-service/tests/: __init__.py  test_analyze.py  test_models.py
operator/: Dockerfile  go.mod  go.sum  main.go
operator/config/deploy/: configmap.yaml  operator.yaml  rbac.yaml
operator/config/samples/: failing-deployment.yaml
operator/controllers/: failure_detector.go  workload_controller.go
operator/internal/config/: config.go
operator/internal/llmclient/: client.go  types.go
operator/internal/logbackend/: http.go  interface.go  kubernetes.go
(+8 files in other folders)
