[project]
name = "llm-service"
version = "0.1.0"
description = "k8s LogJedi LLM analysis service: May the logs be with you. Your AI SRE Jedi that reads failures, writes fixes. FastAPI + Strands."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "strands-agents>=1.0.0",
]

[project.urls]
Repository = "https://github.com/adefemi171/k8s.LogJedi"

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_service*"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".venv", "__pycache__", "build"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]
